--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,17 @@
 <resources>
     <string name="app_name">CriminalIntent</string>
+    <!--Edit Text-->
     <string name="crime_title_hint">Enter a title for the crime.</string>
+    <string name="crime_title_label">Title</string>
+
+    <!--Buttons-->
+
+
+    <!--Check Box-->
+    <string name="crime_solved_label">Solved</string>
+
+    <!--Text View-->
+    <string name="crime_details_label">Details</string>
+
+
 </resources>
