--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="crime_title_label">Title</string>
 
     <!--Buttons-->
-
+    <string name="date_picker_title">Date of Crime:</string>
 
     <!--Check Box-->
     <string name="crime_solved_label">Solved</string>
